@@ -431,7 +431,6 @@ typedef struct {
     BOOLEAN           SilenceAPFS;
     BOOLEAN           SyncAPFS;
     BOOLEAN           ProtectNVRAM;
-    BOOLEAN           PanicFilter;
     BOOLEAN           ScanAllESP;
     BOOLEAN           TagsHelp;
     BOOLEAN           TextHelp;
