@@ -4,6 +4,8 @@
 - Fixes `DisableAMFI` Feature
   * The feature had been disabled under some circumstances
   * This bug was introduced in v0.13.2.AP (Commit 8705fdb)
+- Removes `PanicFilter` Feature
+  * The feature is not used by the target unsupported units in RefindPlus and creates issues on supported units
 
 
 0.13.2.AP (19 Apr 2022):
